# gm

./: .gitignore  README.md
common/: sm2utils.go
sm2/: sm2.go  sm2_ignore.txt  sm2_practise_ignore.txt  sm2_test.go  sm2_test_ignore.txt  sm2key.go  sm2param.go
sm2/libsm2/: CMakeLists.txt  kdf.h  obj_mac.h  sm2.c  sm2.h  sm2test.c
sm2/libsm2/include/: ecdh.h  ecdsa.h  ossl_typ.h
sm2/sm2p256v1/: sm2p256_amd64.go  sm2p256v1.go  sm2p256v1_test.go
sm3/: sm3.go  sm3_test.go
sm3/libsm3/: byteorder.h  sm3.c  sm3.h  sm3_hmac.c
sm4/: sm4.go  sm4_amd64.s  sm4_test.go
